--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/ubuntu": "^0.2.3",
+    "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
     "expo": "~51.0.28",
     "expo-contacts": "~13.0.5",
